--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -1,4 +1,5 @@
-FROM ubuntu:xenial
+ARG BASE_TAG=focal
+FROM ubuntu:${BASE_TAG}
 MAINTAINER Benedikt Lang <mail@blang.io>
 ENV DEBIAN_FRONTEND noninteractive
 
