--- a/Dockerfile.full
+++ b/Dockerfile.full
@@ -1,5 +1,5 @@
 ARG BASE_IMAGE=blang/latex:ctanbasic
 FROM ${BASE_IMAGE}
-MAINTAINER Benedikt Lang <mail@blang.io>
 
-RUN tlmgr install scheme-full
+RUN tlmgr install scheme-full \
+    && luaotfload-tool -u
